[build-system]
requires = ["packaging", "setuptools", "wheel","torch"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
torch = {version = "^2.0.1", source = "pytorch-gpu-src"}

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
